--- a/src/static_version/assets/style.css
+++ b/src/static_version/assets/style.css
@@ -1,3 +1,10 @@
+/* Estuary - A HTML, CSS, and JavaScript framework that looks like the default Kodi theme
+Created originally by github.com/MarketingPipeline
+More info can be found about this design framework here -
+https://github.com/MarketingPipeline/Estuary/
+A thank you to any contributors that helped make this project possible! 
+*/
+
 /* Primary Styles */
 *, *::before, *::after {
    box-sizing: border-box;
