--- a/src/static_version/assets/style.css
+++ b/src/static_version/assets/style.css
@@ -208,7 +208,7 @@ a {
 .s-sidebar__nav-link:hover {
    background: #1085a8;
    color:white;
-   border-left: 75px solid red;
+   border-left: 75px solid #065c6b;
 }
 
 .s-sidebar__nav-link:hover >i {
@@ -577,7 +577,7 @@ text-align: start;
 
 
 .swiper-slide p:hover{
-  background-color:red;
+  background-color:#065c6b;
   
 }
 
